# nh-launcher

./: .env.example  .gitignore  Cargo.toml  flake.nix  package-lock.json  package.json  pnpm-lock.yaml
.storybook/: main.ts
dnas/sensemaker/: CHANGELOG.md
dnas/sensemaker/workdir/: dna.yaml
dnas/sensemaker/zomes/coordinator/assessment_tray/: Cargo.toml
dnas/sensemaker/zomes/coordinator/assessment_tray/src/: assessment_control_registration.rs  assessment_tray_config.rs  lib.rs
dnas/sensemaker/zomes/integrity/assessment_tray/: Cargo.toml
dnas/sensemaker/zomes/integrity/assessment_tray/src/: lib.rs
dnas/test_provider/workdir/: dna.yaml
dnas/we/zomes/coordinator/profiles/: Cargo.toml
dnas/we/zomes/integrity/profiles/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
ui/app/: dark.json  high-contrast.json  light.json  package.json
ui/app/src/: context.ts  global-applets-service.ts  main-dashboard.ts  matrix-store.ts  types.ts  utils.ts  we-app.ts  yaati-decorator.ts
ui/app/src/decorators/: alert-event.ts
ui/app/src/elements/components/: applet-instance-status-list.ts  applet-library.ts  applet-list-item.ts  icon-dot.ts  installable-applets.ts  invitations-block.ts  join-group-card.ts  joinable-applet-instance-list.ts  managing-groups-card.ts  profile-prompt.ts  render-block.ts  sidebar-button.ts  table-filter-map.ts  table.ts  uninstalled-applet-instance-list.ts
ui/app/src/elements/dashboard/: applet-instance-renderer.ts  applet-not-installed.ts  applet-not-running.ts  context-selector.ts  home-screen.ts  neighbourhood-home.ts  neighbourhood-settings.ts  nh-sensemaker-settings.ts  (+2 more)
ui/app/src/nh-config/: create-input-dimension-form.ts  create-output-dimension-form.ts  dimension-list.ts  index.ts  nh-context-selector.ts  nh-global-config.ts  types.ts
ui/app/style-dictionary/: build.js  config.json  split_tokens.js  theme.json  tokens.json
ui/app/style-dictionary/tokens/: $metadata.json
ui/libs/app-loader/: package.json
ui/libs/app-loader/src/: delegateConstructors.ts  holochainConnection.ts
ui/libs/design-system-components/: README.md  package.json
ui/libs/design-system-components/src/: alert.ts  button-group.ts  button.ts  card-list.ts  card.stories.ts  card.ts  dialog.stories.ts  dialog.ts  dropdown-accordion.stories.ts  dropdown-accordion.ts  index.ts  menu.ts  page-header-card.ts  pagination.ts  select-avatar.stories.ts  select-avatar.ts  skeleton.ts  slide.ts  spinner.stories.ts  spinner.ts  tab-button.ts  tooltip.ts
ui/libs/design-system-styles/: package.json
ui/libs/design-system-styles/src/: index.ts
ui/libs/dev-util/: package.json
ui/libs/dev-util/src/: create-or-join-nh.ts
ui/libs/membrane-invitations/: package.json
ui/libs/membrane-invitations/src/: membrane-invitations-client.ts
ui/libs/nh-launcher-applet/: package.json  tsconfig.json
ui/libs/nh-launcher-applet/src/: create-assessment-widget.ts  display-assessment-widget.ts  full-applet-view.ts  index.ts  resource-assessment-tray.ts  resource-view.ts  resourceView.ts
ui/libs/sensemaker-client/: package.json
ui/libs/sensemaker-client/src/: applet.ts  assessment_control.ts  index.ts  resourceDef.ts  sensemakerService.ts  sensemakerStore.ts  utils.ts  widget.ts
ui/libs/sensemaker-client/tests/: index.ts  utils.ts
ui/libs/testing-utils/: package.json
(+108 files in other folders)
