[workspace]
members = [
  "dnas/lobby/zomes/coordinator/*",
  "dnas/lobby/zomes/integrity/*",
  "dnas/we/zomes/coordinator/*",
  "dnas/we/zomes/integrity/*",
]
exclude = [
  # :NOTE: Excluded "src-tauri" which builds to different toolchains.
  #        Can be added when https://doc.rust-lang.org/cargo/reference/unstable.html#per-package-target stabilises.
  "src-tauri"
]
resolver = "2"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace.dependencies]
hdi = { version = "0.2.0" }
hdk = { version = "0.1.0" }
serde = "1"
holochain = {version = "0.1.0"}
fixt = { version = "0.1.0" }
