[workspace]
members = [
  "dnas/lobby/zomes/coordinator/*",
  "dnas/lobby/zomes/integrity/*",
  "dnas/we/zomes/coordinator/*",
  "dnas/we/zomes/integrity/*",
]
resolver = "2"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace.dependencies]
hdi = { version = "=0.4.0-beta-dev.17" }
hdk = { version = "=0.3.0-beta-dev.21" }
serde = "=1.0.171"
holochain = {version = "=0.3.0-beta-dev.26"}
fixt = { version = "0.2.3" }
