[workspace]
members = [
  "dnas/lobby/zomes/coordinator/*",
  "dnas/lobby/zomes/integrity/*",
  "dnas/we/zomes/coordinator/*",
  "dnas/we/zomes/integrity/*",
  "dnas/sensemaker/lib/*",
  "dnas/sensemaker/zomes/coordinator/*",
  "dnas/sensemaker/zomes/integrity/*",
  "dnas/test_provider/zomes/coordinator/*",
  "dnas/test_provider/zomes/integrity/*",
]
resolver = "2"

[workspace.dependencies]
fixt = { version = "0.2.2" }
derive_more = "*"
thiserror = "1.0.20"
nanoid = "0.3"
observability = "0.1.2"
stream-cancel = "0.8.0"
futures = { version = "0.3.1", default-features = false }
tokio = { version = "1.3", features = ["full"] }
hdi = { version = "0.4.1" }
hdk = { version = "0.3.1" }
serde = "1"
holochain = { version = "0.3.1" }
holo_hash = "0.3.1"
hc_zome_peer_status_coordinator = { git = "https://github.com/holochain-open-dev/peer-status", branch = "bump-0.3", package = "hc_zome_peer_status_coordinator" }
hc_zome_profiles_coordinator = { git = "https://github.com/holochain-open-dev/profiles", branch = "for-hdk-v0.3.1" }
hc_zome_profiles_integrity = { git = "https://github.com/holochain-open-dev/profiles", branch = "for-hdk-v0.3.1" }
