[package]
edition = "2021"
name = "nh_zome_assessment_tray"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "nh_zome_assessment_tray"

[dependencies]
serde = { workspace = true }
hdk = { workspace = true }
holo_hash = { workspace = true}

nh_sensemaker_zome_lib = { path = "../../../lib/api_helpers" }
nh_zome_assessment_tray_integrity = { path = "../../integrity/assessment_tray" }
sensemaker_integrity = { path = "../../integrity/sensemaker" }
sensemaker_integrity_structs = { path = "../../integrity/sensemaker_structs" }
